--- a/contact.html
+++ b/contact.html
@@ -37,6 +37,34 @@
             </ul>
         </nav>
     </header>
+
+    <main>
+
+
+        <section class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <h1>Contact Anna</h1>
+                    <hr class="my-4">
+                </div>
+            </div>
+        <form>
+            <div class="form-group">
+              <label for="exampleFormControlInput1">Email address</label>
+              <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+            </div>
+            <div class="form-group">
+                <label for="formGroupExampleInput">Name</label>
+                <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Name">
+            </div>
+            <div class="form-group">
+              <label for="exampleFormControlTextarea1">Message</label>
+              <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+            </div>
+            <button type="submit" class="btn bg-dark text-white">Submit</button>
+          </form>
+        </section>
+    </main>
   
     <!-- Bootstrap JS CDN-->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
