--- a/portfolio.html
+++ b/portfolio.html
@@ -40,6 +40,32 @@
             </ul>
         </nav>
     </header>
+
+    <main>
+
+        <section class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <h1>Portfolio</h1>
+                    <hr class="my-4">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-6"><img src="http://placehold.it/350x350"></div>
+                <div class="col-md-6"><img src="http://placehold.it/350x350"></div>
+            </div>
+            <br>
+            <div class="row">
+                <div class="col-md-6"><img src="http://placehold.it/350x350"></div>
+                <div class="col-md-6"><img src="http://placehold.it/350x350"></div>
+            </div>
+            <br>
+            <div class="row">
+                <div class="col-md-6"><img src="http://placehold.it/350x350"></div>
+                <div class="col-md-6"></div>
+            </div>
+        </section>
+    </main>
   
     <!-- Bootstrap JS CDN-->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
