Footer Added to All Pages

--- a/portfolio.html
+++ b/portfolio.html
@@ -66,6 +66,12 @@
             </div>
         </section>
     </main>
+
+     <!--Footer-->
+     <footer class="p-0 mb-0 bg-white text-dark fixed-bottom">
+        <div class="footer-copyright text-center py-3">Anna Hickey Fotis © 2020 Copyright
+        </div>
+    </footer>
   
     <!-- Bootstrap JS CDN-->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
