--- a/contact.html
+++ b/contact.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <!-- Main CSS Link -->
     <link rel="stylesheet" href="CSS/main.css">
+    <!-- Contact CSS Link -->
+    <link rel="stylesheet" href="CSS/contact.css">
 
 </head>
 
@@ -65,6 +67,12 @@
           </form>
         </section>
     </main>
+
+    <!--Footer-->
+    <footer class="p-0 mb-0 bg-white text-dark fixed-bottom">
+        <div class="footer-copyright text-center py-3">Anna Hickey Fotis © 2020 Copyright
+        </div>
+    </footer>
   
     <!-- Bootstrap JS CDN-->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
