Portfolio Column Fix and CSS Clean

--- a/contact.html
+++ b/contact.html
@@ -43,7 +43,7 @@
     <main>
 
 
-        <section class="container">
+        <section class="container contactForm">
             <div class="row">
                 <div class="col-md-12">
                     <h1>Contact Anna</h1>
