--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <main>
 
     <!-- Begin container -->
-        <section class="container">
+        <section class="container aboutMe">
             <div class="card">
                 <div class="card-body">
     
