--- a/index.html
+++ b/index.html
@@ -48,10 +48,7 @@
 
     <!-- Begin container -->
         <section class="container aboutMe">
-            <div class="card">
-                <div class="card-body">
-    
-            <!--Container header-->
+            <!--Header-->
                     <div class="row">
                         <div class="col-lg-12">
                             <h1>About Anna</h1>
@@ -65,7 +62,6 @@
                             <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae cumque corporis quis sed, quod pariatur! Officia aut tempore repellendus, culpa inventore magnam accusamus nemo fugiat debitis voluptates ratione omnis, nobis.</p>
                         </div>
                     </div>
-
             <br>
             <!--Container footer-->
                     <div class="row">
@@ -73,10 +69,7 @@
                             <hr class="my-4">
                              <p>I will add more words here when I feel more clever.</p>
                         </div>
-                    </div>
-        <!-- End card divs-->
-                </div>
-            </div> 
+                    </div>   
         </section>  
     </main>
 
