Add favicon to all pages

--- a/contact.html
+++ b/contact.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="CSS/main.css">
     <!-- Contact CSS Link -->
     <link rel="stylesheet" href="CSS/contact.css">
+    <!--Favicon Link-->
+    <link rel="icon" type="image/x-icon" href="Images/AHF.png">
 
 </head>
 
