--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
      <link rel="stylesheet" href="CSS/main.css">
      <!--Index CSS Link-->
      <link rel="stylesheet" href="CSS/index.css">
+     <!--Favicon Link-->
+     <link rel="icon" type="image/x-icon" href="Images/AHF.png">
 </head>
     
 
