--- a/portfolio.html
+++ b/portfolio.html
@@ -14,6 +14,8 @@
    <link rel="stylesheet" href="CSS/main.css">
     <!-- Portfolio CSS Link -->
    <link rel="stylesheet" href="CSS/portfolio.css">
+   <!--Favicon Link-->
+   <link rel="icon" type="image/x-icon" href="Images/AHF.png">
 </head>
 
 
