Small Details for EOD

--- a/contact.html
+++ b/contact.html
@@ -45,7 +45,7 @@
     <main>
 
 
-        <section class="container contactForm">
+        <section class="container mainBody">
             <div class="row">
                 <div class="col-md-12">
                     <h1>Contact Anna</h1>
