--- a/portfolio.html
+++ b/portfolio.html
@@ -49,7 +49,7 @@
     <main>
 
        
-        <section class="container portfolio">
+        <section class="container mainBody">
             <!--Portfolio Header-->
             <div class="row">
                 <div class="col-sm-12">
