--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <main>
 
     <!-- Begin container -->
-        <section class="container aboutMe">
+        <section class="container mainBody">
             <!--Header-->
                     <div class="row">
                         <div class="col-lg-12">
@@ -67,7 +67,7 @@
             <br>
             <!--Container footer-->
                     <div class="row">
-                        <div class="col-lg-12">
+                        <div class="col-sm-12">
                             <hr class="my-4">
                              <p>I will add more words here when I feel more clever.</p>
                         </div>
