--- a/contact.html
+++ b/contact.html
@@ -42,6 +42,10 @@
         </nav>
     </header>
 
+    <!-- Background Image -->
+    <figure class="p-5 bg-image" style="background-image: url('Images/pink_brick.jpg');
+    height: 800px;" alt="Pink Brick Background">
+
     <main>
 
 
@@ -75,7 +79,7 @@
         <div class="footer-copyright text-center py-3">Anna Hickey Fotis © 2020 Copyright
         </div>
     </footer>
-  
+  </figure>
     <!-- Bootstrap JS CDN-->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
