Link Fixes and HTML Cleanup

--- a/index.html
+++ b/index.html
@@ -71,18 +71,23 @@
                         </div>
                     </div>
             <!--Divider-->
-                <hr class="my-4">
+                     <hr class="my-4">
             <!--Social Links-->
                     <div class="row">
                         <div class="col-sm-10">
-                             <p>Visit Anna on Facebook, LinkedIn, and GitHub!</p>
+                             <p>Connect with Anna on Facebook, LinkedIn, and GitHub!</p>
                         </div>
                         <div class="col-sm-2">
                             <div class="row">
-                                <div class="col-sm-4"><a href="www.facebook.com/profile.php?id=13957518" target="_blank" title="Facebook"><i class="fa fa-facebook-f fa-2x"  alt="Facebook Icon"></i></a></div>
-                                <div class="col-sm-4"><a href="www.linkedin.com/in/anna-hickey-fotis" target="_blank" title="LinkedIn"><i class="fa fa-linkedin fa-2x" alt="LinkedIn"></i></a></div>
-                                <div class="col-sm-4"><a href="github.com/AHFotis" target="_blank" title="GitHub"><i class="fa fa-github fa-2x" alt=GitHub></i></a></div>
-                               
+                                <div class="col-sm-4">
+                                    <a href="https://www.facebook.com/profile.php?id=13957518" target="_blank" title="Facebook"><i class="fa fa-facebook-f fa-2x"  alt="Facebook Icon"></i></a>
+                                </div>
+                                <div class="col-sm-4">
+                                    <a href="https://www.linkedin.com/in/anna-hickey-fotis" target="_blank" title="LinkedIn"><i class="fa fa-linkedin fa-2x" alt="LinkedIn"></i></a>
+                                </div>
+                                <div class="col-sm-4">
+                                    <a href="https://github.com/AHFotis" target="_blank" title="GitHub"><i class="fa fa-github fa-2x" alt=GitHub></i></a>
+                                </div>
                             </div>
                         </div>
                     </div>   
@@ -95,7 +100,8 @@
         <div class="footer-copyright text-center py-3">Anna Hickey Fotis © 2020 Copyright</div>
     </footer>
 
-</figure>
+    </figure>
+    
     <!-- Bootstrap JS CDN-->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
