--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <!--Container body-->
                     <div class="row">
                         <div class="col-lg-12">
-                            <img class="img img-thumbnail img-fluid" src="Images/Anna_Main.jpg" alt="Picture of Anna">
+                            <img class="img img-thumbnail img-fluid" src="Images/img_index/Anna_Main.jpg" alt="Picture of Anna">
                             <p class="lead">Anna Hickey Fotis is a full stack developer based in Minneapolis, MN. Currently she is studying coding at the University of Minnesota Coding Bootcamp, where she has already gained skills in HTML5, CSS, Bootstrap, and JavaScript. When not at her code editor, Anna can be seen on stages and screens around Minneapolis as a theatrical and commercial actress, specializing in comedy, musical theatre, and industrial work. In her spare time, Anna enjoys road trips to Wisconsin, baking and eating said baking, whiskey tasting, and the Real Housewives franchise.</p>
                         </div>
                     </div>
