Changes from HTML Validation Service - Index

--- a/index.html
+++ b/index.html
@@ -34,25 +34,28 @@
             </button>
         
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="portfolio.html">Portfolio</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="contact.html">Contact</a>
-                </li>
-            </ul>
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="portfolio.html">Portfolio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="contact.html">Contact</a>
+                    </li>
+                </ul>
+            </div>
         </nav>
     </header>
 
+
+    <!--Main Body-->
+    <main>
+
     <!-- Background Image -->
     <figure class="p-5 bg-image" style="background-image: url('Images/pink_brick.jpg');
-    height: 800px;" alt="Pink Brick Background">
-    
-    <main>
+    height: 800px;">
 
     <!-- Begin container -->
         <section class="container mainBody">
@@ -80,13 +83,13 @@
                         <div class="col-sm-2">
                             <div class="row">
                                 <div class="col-sm-4">
-                                    <a href="https://www.facebook.com/profile.php?id=13957518" target="_blank" title="Facebook"><i class="fa fa-facebook-f fa-2x"  alt="Facebook Icon"></i></a>
+                                    <a href="https://www.facebook.com/profile.php?id=13957518" target="_blank" title="Facebook"><i class="fa fa-facebook-f fa-2x"></i></a>
                                 </div>
                                 <div class="col-sm-4">
-                                    <a href="https://www.linkedin.com/in/anna-hickey-fotis" target="_blank" title="LinkedIn"><i class="fa fa-linkedin fa-2x" alt="LinkedIn"></i></a>
+                                    <a href="https://www.linkedin.com/in/anna-hickey-fotis" target="_blank" title="LinkedIn"><i class="fa fa-linkedin fa-2x"></i></a>
                                 </div>
                                 <div class="col-sm-4">
-                                    <a href="https://github.com/AHFotis" target="_blank" title="GitHub"><i class="fa fa-github fa-2x" alt=GitHub></i></a>
+                                    <a href="https://github.com/AHFotis" target="_blank" title="GitHub"><i class="fa fa-github fa-2x"></i></a>
                                 </div>
                             </div>
                         </div>
