--- a/portfolio.html
+++ b/portfolio.html
@@ -30,27 +30,27 @@
             </button>
         
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="index.html">Home</a>
-                </li>
-                <li class="nav-item active">
-                    <a class="nav-link" href="portfolio.html">Portfolio <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html">Home</a>
+                    </li>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="portfolio.html">Portfolio <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
                     <a class="nav-link" href="contact.html">Contact</a>
-                </li>
-
-            </ul>
+                    </li>
+                </ul>
+            </div>
         </nav>
     </header>
 
+    <!--Main Body-->
+    <main>
+
     <!-- Background Image -->
     <figure class="p-5 bg-image" style="background-image: url('Images/pink_brick.jpg');
-    height: 1600px;" alt="Pink Brick Background">
-
-    <!-- Main Body-->
-    <main>
+    height: 1600px;">
 
         <section class="container mainBody">
             <!--Portfolio Header-->
