Add Photos to Portolio with Alt Tags

--- a/contact.html
+++ b/contact.html
@@ -46,8 +46,7 @@
     <main>
 
     <!-- Background Image -->
-    <figure class="p-5 bg-image" style="background-image: url('Images/pink_brick.jpg');
-    height: 700px;">
+    <figure class="p-5 bg-image" style="background-image: url('Images/pink_brick.jpg');">
 
    
 
