--- a/portfolio.html
+++ b/portfolio.html
@@ -49,8 +49,7 @@
     <main>
 
     <!-- Background Image -->
-    <figure class="p-5 bg-image" style="background-image: url('Images/pink_brick.jpg');
-    height: 1600px;">
+    <figure class="p-5 bg-image" style="background-image: url('Images/pink_brick.jpg');">
 
         <section class="container mainBody">
             <!--Portfolio Header-->
@@ -65,15 +64,15 @@
                 <div class="col-sm-1 col-xs-3"></div>
                 <div class="col-sm-10 col-xs-6">
                     <div class="row">
-                        <div class="col-md-6 col-sm-12"><img class="img img-thumbnail img-fluid" src="http://placehold.it/350x350"></div>
-                        <div class="col-md-6 col-sm-12"><img class="img img-thumbnail img-fluid" src="http://placehold.it/350x350"></div>
+                        <div class="col-md-6 col-sm-12"><img class="img img-thumbnail img-fluid" src="Images/img_portfolio/Code.jpg" alt="Anna At Work"></div>
+                        <div class="col-md-6 col-sm-12"><img class="img img-thumbnail img-fluid" src="Images/img_portfolio/Act.jpg" alt="Anna Acting"></div>
                     </div> 
                     <div class="row">
-                        <div class="col-md-6 col-sm-12"><img class="img img-thumbnail img-fluid" src="http://placehold.it/350x350"></div>
-                        <div class="col-md-6 col-sm-12"><img class="img img-thumbnail img-fluid" src="http://placehold.it/350x350"></div>
+                        <div class="col-md-6 col-sm-12"><img class="img img-thumbnail img-fluid" src="Images/img_portfolio/Madde.jpg" alt="Anna's Dog, Madde"></div>
+                        <div class="col-md-6 col-sm-12"><img class="img img-thumbnail img-fluid" src="Images/img_portfolio/Cabin-Time.jpg" alt="Cabin Time"></div>
                     </div>
                     <div class="row">
-                        <div class="col-md-6 col-sm-12"><img class="img img-thumbnail img-fluid" src="http://placehold.it/350x350"></div>
+                        <div class="col-md-6 col-sm-12"><img class="img img-thumbnail img-fluid" src="Images/img_portfolio/Pancakes.jpg" alt="Apple Peanut Butter Pancakes"></div>
                         <div class="col-md-6 col-xs-3"></div>
                     </div>
                 </div> 
