--- a/portfolio.html
+++ b/portfolio.html
@@ -64,7 +64,7 @@
                 <div class="col-sm-1 col-xs-3"></div>
                 <div class="col-sm-10 col-xs-6">
                     <div class="row">
-                        <div class="col-md-6 col-sm-12"><img class="img img-thumbnail img-fluid" src="Images/img_portfolio/Code.jpg" alt="Anna At Work"></div>
+                        <div class="col-md-6 col-sm-12"><img class="img img-thumbnail img-fluid" src="Images/img_portfolio/Code.JPG" alt="Anna At Work"></div>
                         <div class="col-md-6 col-sm-12"><img class="img img-thumbnail img-fluid" src="Images/img_portfolio/Act.jpg" alt="Anna Acting"></div>
                     </div> 
                     <div class="row">
