Full Document Review

--- a/contact.html
+++ b/contact.html
@@ -1,3 +1,5 @@
+<!-- CONTACT PAGE -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -42,13 +44,11 @@
         </nav>
     </header>
 
-    <!--Main Body-->
+
     <main>
 
     <!-- Background Image -->
     <figure class="p-5 bg-image" style="background-image: url('Images/pink_brick.jpg');">
-
-   
 
         <!--Container-->
         <section class="container mainBody">
@@ -69,7 +69,7 @@
                 </div>
                 <div class="form-group">
                     <label for="exampleFormControlTextarea1">Message</label>
-                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Message"></textarea>
                 </div>
                 <button type="submit" class="btn bg-dark text-white">Submit</button>
             </form>
