--- a/portfolio.html
+++ b/portfolio.html
@@ -63,15 +63,15 @@
                 <div class="col-sm-1 col-xs-3"></div>
                 <div class="col-sm-10 col-xs-6">
                     <div class="row">
-                        <div class="col-md-6 col-sm-12"><img class="img img-thumbnail img-fluid" src="Images/img_portfolio/Code.png" alt="Anna At Work"></div>
-                        <div class="col-md-6 col-sm-12"><img class="img img-thumbnail img-fluid" src="Images/img_portfolio/Act.jpg" alt="Anna Acting"></div>
+                        <figure class="col-md-6 col-sm-12"><img class="img img-thumbnail img-fluid" src="Images/img_portfolio/Code.png" alt="Anna At Work"></figure>
+                        <figure class="col-md-6 col-sm-12"><img class="img img-thumbnail img-fluid" src="Images/img_portfolio/Act.jpg" alt="Anna Acting"></figure>
                     </div> 
                     <div class="row">
-                        <div class="col-md-6 col-sm-12"><img class="img img-thumbnail img-fluid" src="Images/img_portfolio/Madde.jpg" alt="Anna's Dog, Madde"></div>
-                        <div class="col-md-6 col-sm-12"><img class="img img-thumbnail img-fluid" src="Images/img_portfolio/Cabin-Time.jpg" alt="Cabin Time"></div>
+                        <figure class="col-md-6 col-sm-12"><img class="img img-thumbnail img-fluid" src="Images/img_portfolio/Madde.jpg" alt="Anna's Dog, Madde"></figure>
+                        <figure class="col-md-6 col-sm-12"><img class="img img-thumbnail img-fluid" src="Images/img_portfolio/Cabin-Time.jpg" alt="Cabin Time"></figure>
                     </div>
                     <div class="row">
-                        <div class="col-md-6 col-sm-12"><img class="img img-thumbnail img-fluid" src="Images/img_portfolio/Pancakes.jpg" alt="Apple Peanut Butter Pancakes"></div>
+                        <figure class="col-md-6 col-sm-12"><img class="img img-thumbnail img-fluid" src="Images/img_portfolio/Pancakes.jpg" alt="Apple Peanut Butter Pancakes"></figure>
                         <div class="col-md-6 col-xs-3"></div>
                     </div>
                 </div> 
