Resize Portfolio Columns

--- a/portfolio.html
+++ b/portfolio.html
@@ -60,8 +60,8 @@
             </div>
             <!-- Portfolio Images-->
             <div class="row">
-                <div class="col-sm-1 col-xs-3"></div>
-                <div class="col-sm-10 col-xs-6">
+                <div class="col-md-2 col-sm-1"></div>
+                <div class="col-md-8 col-sm-10">
                     <div class="row">
                         <figure class="col-md-6 col-sm-12"><img class="img img-thumbnail img-fluid" src="Images/img_portfolio/Code.png" alt="Anna At Work"></figure>
                         <figure class="col-md-6 col-sm-12"><img class="img img-thumbnail img-fluid" src="Images/img_portfolio/Act.jpg" alt="Anna Acting"></figure>
@@ -72,10 +72,10 @@
                     </div>
                     <div class="row">
                         <figure class="col-md-6 col-sm-12"><img class="img img-thumbnail img-fluid" src="Images/img_portfolio/Pancakes.jpg" alt="Apple Peanut Butter Pancakes"></figure>
-                        <div class="col-md-6 col-xs-3"></div>
+                        <div class="col-md-6 col-sm-12"></div>
                     </div>
                 </div> 
-                <div class="col-sm-1"></div>  
+                <div class="col-md-2 col-sm-1"></div>  
             </div>
         </section>
         
