--- a/portfolio.html
+++ b/portfolio.html
@@ -66,7 +66,16 @@
                 <div class="row">
                     <div class="col-md-2 col-sm-1"></div>
                     <div class="col-md-8 col-sm-10">
+
                         <div class="row">
+
+                            <div class="col-sm-12 resume">
+                               <h2>Download Anna's Resume <a class="link" href="pdf/N2021 Web Development Resume.pdf"><i class="fa fa-file"></i></a></h2> 
+                            </div>
+
+                            <div class="col-sm-12">
+                                <hr class="my-4">
+                            </div>
 
                             <figure class="col-sm-12"><img class="img img-thumbnail img-fluid" src="Images/recharge.png"
                                     alt="Recharge Car App">
