--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
     <!--Header and Nav -->
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="#">Anna Hickey Fotis</a>
+            <a class="navbar-brand" href="#">Anna <span>Hickey</span><span> Fotis</span></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
