--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <!-- Header and Nav -->
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-white">
-            <a class="navbar-brand" href="#">Anna Hickey Fotis</a>
+            <a class="navbar-brand img-fluid" href="#">Anna <span>Hickey</span><span> Fotis</span></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -56,7 +56,7 @@
     <main>
 
         <!-- Background Image -->
-        <figure class="p-5 bg-image backImg" style="background-image: url('Images/pink_brick.jpg');">
+        <figure class="bg-image p-5 backImg" style="background-image: url('Images/pink_brick.jpg');">
 
             <!-- Begin container -->
             <section class="container mainBody">
