--- a/index.html
+++ b/index.html
@@ -92,14 +92,14 @@
                         <div class="row">
                             <div class="col-sm-4">
                                 <a href="https://www.facebook.com/profile.php?id=13957518" target="_blank"
-                                    title="Facebook"><i class="fa fa-facebook-f fa-2x"></i></a>
+                                    class="socialFace" title="Facebook"><i class="fa fa-facebook-f fa-2x"></i></a>
                             </div>
                             <div class="col-sm-4">
                                 <a href="https://www.linkedin.com/in/anna-hickey-fotis" target="_blank"
-                                    title="LinkedIn"><i class="fa fa-linkedin fa-2x"></i></a>
+                                    class="socialLinked" title="LinkedIn"><i class="fa fa-linkedin fa-2x"></i></a>
                             </div>
                             <div class="col-sm-4">
-                                <a href="https://github.com/AHFotis" target="_blank" title="GitHub"><i
+                                <a href="https://github.com/AHFotis" target="_blank" class="socialGit" title="GitHub"><i
                                         class="fa fa-github fa-2x"></i></a>
                             </div>
                         </div>
