--- a/portfolio.html
+++ b/portfolio.html
@@ -70,7 +70,8 @@
                         <div class="row">
 
                             <div class="col-sm-12 resume">
-                               <h2>Download Anna's Resume <a class="link" href="pdf/2021 Web Development Resume.pdf"><i class="fa fa-file"></i></a></h2> 
+                                <h2>Download Anna's Resume <a class="link" href="pdf/2021 Web Development Resume.pdf"><i
+                                            class="fa fa-file"></i></a></h2>
                             </div>
 
                             <div class="col-sm-12">
@@ -111,6 +112,8 @@
                         </div>
                         <div class="col-md-2 col-sm-1"></div>
                     </div>
+
+
             </section>
 
         </figure>
