--- a/portfolio.html
+++ b/portfolio.html
@@ -55,14 +55,15 @@
         <!-- Background Image -->
         <figure class="p-5 bg-image backImg" style="background-image: url('Images/pink_brick.jpg');">
 
-            <section class="container mainBody">
+            <section class="container portEntry">
                 <div class="row">
                     <div class="col-sm-12">
                         <h1 class="bodyHead">Portfolio</h1>
                         <hr class="my-4">
                     </div>
                 </div>
-                <!-- Portfolio Images-->
+
+                <!-- Resume -->
                 <div class="row">
                     <div class="col-md-2 col-sm-1"></div>
                     <div class="col-md-8 col-sm-10">
@@ -73,46 +74,69 @@
                                 <h2>Download Anna's Resume <a class="link" href="pdf/2021 Web Development Resume.pdf"><i
                                             class="fa fa-file"></i></a></h2>
                             </div>
-
-                            <div class="col-sm-12">
-                                <hr class="my-4">
-                            </div>
-
-                            <figure class="col-sm-12"><img class="img img-thumbnail img-fluid" src="Images/recharge.png"
-                                    alt="Recharge Car App">
-                                <h4><b>Recharge Car App</b></h4>
-                                <p>Visit the Recharge <a class="link" href="https://github.com/AHFotis/RechargeCarApp"
-                                        target="_blank">repository.</a> | Visit the Recharge <a class="link"
-                                        href="https://ahfotis.github.io/RechargeCarApp/" target="_blank">live page.</a>
-                                </p>
-                            </figure>
-
-                            <figure class="col-sm-12"><img class="img img-thumbnail img-fluid" src="Images/codeQuiz.png"
-                                    alt="Recharge Car App">
-                                <h4><b>Code Quiz For The Code Wiz</b></h4>
-                                <p>Visit the Code Quiz <a class="link"
-                                        href="https://github.com/AHFotis/CodeQuizForTheCodeWiz"
-                                        target="_blank">repository.</a> | Visit the Code Quiz <a class="link"
-                                        href="https://ahfotis.github.io/CodeQuizForTheCodeWiz/" target="_blank">live
-                                        page.</a>
-                                </p>
-                            </figure>
-
-                            <figure class="col-sm-12"><img class="img img-thumbnail img-fluid"
-                                    src="Images/citySearch.png" alt="Recharge Car App">
-                                <h4><b>City Search: A Weather Dashboard</b></h4>
-                                <p>Visit the City Search <a class="link"
-                                        href="https://github.com/AHFotis/CitySearchWeatherDashboard"
-                                        target="_blank">repository.</a> | Visit the City Search <a class="link"
-                                        href="https://ahfotis.github.io/CitySearchWeatherDashboard/"
-                                        target="_blank">live page.</a>
-                                </p>
-                            </figure>
-
                         </div>
-                        <div class="col-md-2 col-sm-1"></div>
                     </div>
+            </section>
 
+            <!-- Recharge -->
+            <section class="container portEntry">
+
+                <figure class="col-sm-12">
+                    <h4><b>Recharge Car App</b></h4><img class="img img-thumbnail img-fluid" src="Images/recharge.png"
+                        alt="Recharge Car App">
+                    <br>
+                    <br>
+                    <p><b>An application to connect electric car owners with nearby charging stations, at home or on the
+                            go.</b></An>
+                    </p>
+                    <p><b>Technologies Used: </b>HTML5, CSS, JavaScript, jQuery, AJAX, Bulma, Mapquest, Radar, Open
+                        Charger Map</p>
+                    <p>Visit the Recharge <a class="link" href="https://github.com/AHFotis/RechargeCarApp"
+                            target="_blank">repository.</a> | Visit the Recharge <a class="link"
+                            href="https://ahfotis.github.io/RechargeCarApp/" target="_blank">live page.</a>
+                    </p>
+                </figure>
+            </section>
+
+            <!-- Code Quiz -->
+            <section class="container portEntry">
+                <figure class="col-sm-12">
+                    <h4><b>Code Quiz For The Code Wiz</b></h4><img class="img img-thumbnail img-fluid"
+                        src="Images/codeQuiz.png" alt="Recharge Car App">
+                    <br>
+                    <br>
+                    <p><b>A mutiple choice quiz application to text your beginner coding knowledge. Save your score to
+                            see how you improve.</b></p>
+                    <p><b>Technologies Used: </b>HTML5, CSS, JavaScript, Bootstrap, Google Fonts</p>
+                    <p>Visit the Code Quiz <a class="link" href="https://github.com/AHFotis/CodeQuizForTheCodeWiz"
+                            target="_blank">repository.</a> | Visit the Code Quiz <a class="link"
+                            href="https://ahfotis.github.io/CodeQuizForTheCodeWiz/" target="_blank">live
+                            page.</a>
+                    </p>
+                </figure>
+            </section>
+
+            <!-- City Search -->
+            <section class="container portEntry">
+                <figure class="col-sm-12">
+                    <h4><b>City Search: A Weather Dashboard</b></h4><img class="img img-thumbnail img-fluid"
+                        src="Images/citySearch.png" alt="Recharge Car App">
+                    <br>
+                    <br>
+                    <p><b>An easy to use platform for comprehensive weather information per city</b></p>
+                    <p><b>Technologies Used: </b>HTML, CSS, JavaScript, jQuery, Moment.js, Bootstrap, Bootswatch, Open
+                        Weather Map API.</p>
+                    <p>Visit the City Search <a class="link"
+                            href="https://github.com/AHFotis/CitySearchWeatherDashboard" target="_blank">repository.</a>
+                        | Visit the City Search <a class="link"
+                            href="https://ahfotis.github.io/CitySearchWeatherDashboard/" target="_blank">live page.</a>
+                    </p>
+                </figure>
+
+                </div>
+                <div class="col-md-2 col-sm-1"></div>
+
+            </section>
 
             </section>
 
