New projects added

--- a/portfolio.html
+++ b/portfolio.html
@@ -57,8 +57,9 @@
 
             <section class="container portEntry">
                 <div class="row">
-                    <div class="col-sm-12">
-                        <h1 class="bodyHead">Portfolio</h1>
+                    
+                    <div class="col-sm-11">
+                        <h1 class="bodyHead"> Portfolio</h1>
                         <hr class="my-4">
                     </div>
                 </div>
@@ -71,11 +72,48 @@
                         <div class="row">
 
                             <div class="col-sm-12 resume">
-                                <h2>Download Anna's Resume <a class="link" href="pdf/2021 Web Development Resume.pdf"><i
-                                            class="fa fa-file"></i></a></h2>
+                                <h4>Download Anna's Resume <a class="link" href="pdf/2021 Web Development Resume.pdf"><i
+                                            class="fa fa-file"></i></a></h4>
                             </div>
                         </div>
                     </div>
+                    </div>
+            </section>
+
+            <!-- Cup of Sugar -->
+            <section class="container portEntry">
+
+                <figure class="col-sm-12">
+                    <h4><b>Cup of Sugar</b></h4><img class="img img-thumbnail img-fluid" src="Images/cupOfSugar.png"
+                        alt="Cup Of Sugar">
+                    <br>
+                    <br>
+                    <p><b>A full stack, charitable, community platform, Cup of Sugar users can easily find local and national resources, browse posts about what resources or services are available or needed in their community, and connect with one another to help fulfill those needs.</b>
+                    </p>
+                    <p><b>Technologies Used: </b> CSS, Express, MySQL, Sequelize, Session-Sequelize, Handlebars, jQuery, JavaScript, Axios, Charity Navigator, Dotenv, Bcrypt</p>
+                    <p>Visit the Cup of Sugar <a class="link" href="https://github.com/AHFotis/Cup-of-Sugar"
+                            target="_blank">repository.</a> | Visit the Cup Of Sugar <a class="link"
+                            href="https://cup-of-sugar-application.herokuapp.com/" target="_blank">live page.</a>
+                    </p>
+                </figure>
+            </section>
+
+            <!-- Blogosphere -->
+            <section class="container portEntry">
+
+                <figure class="col-sm-12">
+                    <h4><b>The Blogosphere</b></h4><img class="img img-thumbnail img-fluid" src="Images/blogosphere.png"
+                        alt="The Blogosphere">
+                    <br>
+                    <br>
+                    <p><b>A full stack blogging website allowing users to write, update, and delete personal blogs. Bloggers can also view and comment on the blogs of others.</b>
+                    </p>
+                    <p><b>Technologies Used: </b> CSS, JavaScript, MySQL, Inquirer, Sequelize, Express, Handlebars, Session-Sequelize. Dotenv, Bcrypt</p>
+                    <p>Visit the Blogosphere <a class="link" href="https://github.com/AHFotis/TheBlogosphere#technologies"
+                            target="_blank">repository.</a> | Visit the Blogosphere <a class="link"
+                            href="https://the-blogosphere.herokuapp.com/" target="_blank">live page.</a>
+                    </p>
+                </figure>
             </section>
 
             <!-- Recharge -->
@@ -87,13 +125,31 @@
                     <br>
                     <br>
                     <p><b>An application to connect electric car owners with nearby charging stations, at home or on the
-                            go.</b></An>
+                            go.</b>
                     </p>
                     <p><b>Technologies Used: </b>HTML5, CSS, JavaScript, jQuery, AJAX, Bulma, Mapquest, Radar, Open
                         Charger Map</p>
                     <p>Visit the Recharge <a class="link" href="https://github.com/AHFotis/RechargeCarApp"
                             target="_blank">repository.</a> | Visit the Recharge <a class="link"
                             href="https://ahfotis.github.io/RechargeCarApp/" target="_blank">live page.</a>
+                    </p>
+                </figure>
+            </section>
+
+            <!-- Employee Tracking System -->
+            <section class="container portEntry">
+
+                <figure class="col-sm-12">
+                    <h4><b>Employee Tracking System</b></h4><img class="img img-thumbnail img-fluid" src="Images/terminal.png"
+                        alt="Employee Tracking System">
+                    <br>
+                    <br>
+                    <p><b>A command line application that allows the user interact with a Content Mangaement System based on tracking employees. Departments, roles, and employees can be deleted, added, and updated.</b>
+                    </p>
+                    <p><b>Technologies Used: </b> JavaScript, MySQL, console.table, Figlet, Inquierer, Chalk</p>
+                    <p>Visit the Employee Tracking System <a class="link" href="https://github.com/AHFotis/EmployeeTrackingSystem#technologies"
+                            target="_blank">repository.</a> | Visit the Employee Tracking System <a class="link"
+                            href="https://drive.google.com/file/d/1SLzl434iHzIpIeowXpfI_X8LOkMRYnQ3/view" target="_blank">video walkthrough.</a>
                     </p>
                 </figure>
             </section>
