--- a/portfolio.html
+++ b/portfolio.html
@@ -109,7 +109,7 @@
                     <p><b>A full stack blogging website allowing users to write, update, and delete personal blogs. Bloggers can also view and comment on the blogs of others.</b>
                     </p>
                     <p><b>Technologies Used: </b> CSS, JavaScript, MySQL, Inquirer, Sequelize, Express, Handlebars, Session-Sequelize. Dotenv, Bcrypt</p>
-                    <p>Visit the Blogosphere <a class="link" href="https://github.com/AHFotis/TheBlogosphere#technologies"
+                    <p>Visit the Blogosphere <a class="link" href="https://github.com/AHFotis/TheBlogosphere"
                             target="_blank">repository.</a> | Visit the Blogosphere <a class="link"
                             href="https://the-blogosphere.herokuapp.com/" target="_blank">live page.</a>
                     </p>
@@ -161,7 +161,7 @@
                         src="Images/codeQuiz.png" alt="Recharge Car App">
                     <br>
                     <br>
-                    <p><b>A mutiple choice quiz application to text your beginner coding knowledge. Save your score to
+                    <p><b>A multiple choice quiz application to text your beginner coding knowledge. Save your score to
                             see how you improve.</b></p>
                     <p><b>Technologies Used: </b>HTML5, CSS, JavaScript, Bootstrap, Google Fonts</p>
                     <p>Visit the Code Quiz <a class="link" href="https://github.com/AHFotis/CodeQuizForTheCodeWiz"
